<resources>
    <string name="app_name">NMedia</string>
    <string name="greeting">NMedia!</string>
    <string name="post_name">Netology. University of Internet Professions.</string>
    <string name="published">06/06/2022</string>
    <string name="content">Hello, this is the new Netology! Once upon a time, Netology began with online marketing intensives. Then there were courses in design, development, analytics and management. We grow ourselves and help students grow: from beginners to confident professionals. But the most important thing remains with us: we believe that everyone already has the power that makes you want more, aim higher, run faster. Our mission is to help you get on the path to growth and start the chain of change.</string>
    <string name="like">Like</string>
    <string name="sum_likes">0</string>
    <string name="repost">Repost</string>
    <string name="sum_reposts">0</string>
    <string name="visible">Visible</string>
    <string name="sum_visible">0</string>
    <string name="remove">Remove</string>
    <string name="post_text">Post text</string>
    <string name="saveButton">Save</string>
    <string name="enter">Entering text </string>
    <string name="EditImage">Edit icon</string>
    <string name="EditTextTop">Edit Top </string>
    <string name="edit">Edit Massage</string>
    <string name="editTextField" />
    <string name="editButton">Edit save </string>
    <string name="menu">Button menu </string>
    <string name="chooser_share_post">Share Post </string>
    <string name="add">Save Post </string>
    <string name="uri">uri </string>
    <string name="jpeg" />
</resources>